--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "dreamcupp",
   "version": "0.1.0",
+  "homepage": "https://samthi25.github.io/dream_cupp/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-responsive-carousel": "^3.2.23",
